#202: Fixed the max image cropper width for the image selector

--- a/website/src/common/component/input/ImageSelector/imageSelector.css
+++ b/website/src/common/component/input/ImageSelector/imageSelector.css
@@ -17,5 +17,5 @@
 }
 
 .image-selector .image-selector-cropper {
-	max-width: 1000px;
+	max-width: 64rem;
 }
